--- a/src/_locales/pt_BR/messages.json
+++ b/src/_locales/pt_BR/messages.json
@@ -1,1 +1,180 @@
+{
+  "extensionName": { "message": "FoxyProxy Padrão" },
+  "extensionDescription": { "message": "Ferramenta avançada de gerenciamento de proxy fácil de usar para todos" },
 
+  "extensionNameBasic": { "message": "FoxyProxy Básico" },
+
+
+  "error": { "message": "Falha" },
+  "erroNoSettings": { "message": "Nenhuma configuração foi encontrada. Reinstale o FoxyProxy." },
+
+  "deleteAll": { "message": "Excluir tudo" },
+  "export": { "message": "Exportar configurações" },
+  "import": { "message": "Configurações de Importação" },
+  "importProxyList": { "message": "Importar lista de proxy" },
+  "log": { "message": "Registro" },
+  "myIP": { "message": "Qual é o meu IP?" },
+  "deleteAllmessage": { "message": "Todos os dados excluídos" },
+
+  "authError": { "message": "$1 está recusando conexões\nVerifique o nome de usuário/senha do proxy" },
+
+
+  "delete": { "message": "Excluir" },
+  "deleteNot": { "message": "Não apague" },
+  "deleteBrowserData": { "message": "Excluir dados do navegador" },
+  "deleteBrowserDataDescription": { "message": "Cache, cookies, armazenamento indexedDB, armazenamento local DOM, dados de plug-in, dados de service worker." },
+  "deleteBrowserDataNotDescription": { "message": "Senhas armazenadas, histórico de navegação e formulário, histórico de download, webSQL e certificados vinculados ao servidor." },
+  "done": { "message": "Pronto!" },
+
+  "about": { "message": "Sobre" },
+  "syncSettings": { "message": "Sincronizar configurações" },
+  "syncSettingsHelp": { "message": "Ative para usar o Firefox Sync (as configurações são sincronizadas em todos os seus navegadores Firefox). Desligue para armazenar as configurações localmente. Observe que você pode ter duas instâncias diferentes de configurações, uma de sincronização e uma local." },
+//  "onOff": { "message": "Ligar/Desligar" },
+  "on": { "message": "Ligar" },
+  "off": { "message": "Desligar" },
+  "confirmTransferToLocal": { "message": "Deseja transferir as configurações sincronizadas para seu perfil local?\nOs dados existentes serão mesclados." },
+  "confirmTransferToSync": { "message": "Deseja transferir as configurações locais para seu perfil sincronizado?\nOs dados existentes serão mesclados." },
+
+  "modePatterns": { "message": "Use proxies habilitados por padrões em ordem" },
+  "modeDisabled": { "message": "Desativar (usar configurações do Firefox)" },
+  "forAll": { "message": "para todos os URLs" },
+  "noProxies": { "message": "Você não tem nenhuma configuração de proxy."},
+
+
+
+  "edit": { "message": "Editar" },
+  "patterns": { "message": "Padrões" },
+  "confirmDelete": { "message": "Tem certeza de que deseja excluir?" },
+
+  "addProxy": { "message": "Adicionar Proxy" },
+  "editProxy": { "message": "Editar Proxy $1" },
+
+
+  "editPatterns": { "message": "Editar padrões" },
+  "editPatternsFor": { "message": "Editar padrões de $1" },
+
+
+  "errorWas": { "message": "Houve um erro. Por favor, tente novamente." },
+  "errorSlash": { "message": "Nenhuma barra em padrões curinga. Você não pode corresponder a caminhos de URL devido às restrições do Firefox." },
+  "errorEmpty": { "message": "O campo não pode ficar vazio." },
+
+
+  "importEnd": { "message": "As configurações foram importadas com sucesso" },
+  "patternsChanged": { "message": "Alguns padrões foram alterados porque continham barras. Barras em padrões não são mais suportadas." },
+  "importEndSlash": { "message": "Importação concluída. Barras em padrões não são suportadas devido a um bug do Firefox. Revise seus padrões e remova as barras, se houver." },
+  "errorUserPass": { "message": "Por favor, digite o nome de usuário e a senha." },
+  "errorFetch": { "message": "Ocorreu um erro com a operação" },
+
+
+  "errorPattern": { "message": "Por favor, insira um padrão" },
+  "importBW": { "message": "Padrões importados $1 branco e $2 preto." },
+
+  "up": { "message": "Subir" },
+  "down": { "message": "Descer" },
+
+  "disabled": { "message": "Desativado" },
+  "active": { "message": "Ativado" },
+	"activeNote": { "message": "FoxyProxy ignora tudo nesta página, a menos que definido como" },
+  "noMatch": { "message": "Sem correspondência" },
+  "none": { "message": "Nenhum" },
+
+  "name": { "message": "Nome" },
+  "pattern": { "message": "Padrões" },
+  "type": { "message": "Tipo" },
+  "protocol": { "message": "Protocolo" },
+  "whitePatterns": { "message": "Padrões brancos" },
+  "blackPatterns": { "message": "Padrões pretos" },
+  "importedPattern": { "message": "Esse padrão foi importado de uma versão mais antiga do FoxyProxy e alterado durante a importação. Aqui está o padrão original, inalterado:" },
+
+
+  "patternMatch": { "message": "O padrão corresponde ao URL!" },
+  "patternNotMatch": { "message": "O padrão não corresponde ao URL." },
+  "errorProtocol": { "message": "O protocolo não corresponde." },
+
+
+
+  "proxyType": { "message": "Tipo da Proxy" },
+  "color": { "message": "Cor" },
+  "patternShortcuts": { "message": "Atalhos de padrão"},
+  "title": { "message": "Título ou Descrição (opcional)" },
+  "ip": { "message": "Endereço IP do proxy ou nome DNS" },
+  "port": { "message": "Porta" },
+  "username": { "message": "Usuário (opcional)" },
+  "password": { "message": "Senha (opcional)" },
+  "togglePW": { "message": "Alternar senha" },
+
+  "addWhitelist": { "message": "Adicionar padrão de lista de permissões para corresponder a todos os URLs" },
+  "noLocal": { "message": "Não use para endereços IP de host local e intranet/privados" },
+
+
+
+  "patternTester": { "message": "Testador de padrões" },
+  "patternHelp": { "message": "Ajuda de padrão" },
+  "welcome": { "message": "Bem Vindo" },
+  "options": { "message": "Opções" },
+  "optionsPage": { "message": "FoxyProxy Opções" },
+  "enterUrl": { "message": "Insira o URL para testar" },
+  "enterUrlNote": { "message": "(caminhos e parâmetros de consulta são ignorados)" },
+  "patternDetail": { "message": "Insira os detalhes do padrão." },
+  "patternNote": { "message": "(sem caminhos, sem parâmetros de consulta)" },
+  "clickTest": { "message": "Clique em 'Testar' quando estiver pronto" },
+
+
+
+
+
+
+
+  "ok": { "message": "OK" },
+  "clear": { "message": "Limpar" },
+  "refresh": { "message": "Atualizar" },
+  "cancel": { "message": "Cancelar" },
+  "back": { "message": "Voltar" },
+  "test": { "message": "Testar" },
+  "help": { "message": "Ajuda" },
+  "importPatterns": { "message": "Importar padrões" },
+  "exportPatterns": { "message": "Exportar padrões" },
+  "newWhite": { "message": "Novo Branco" },
+  "newBlack": { "message": "Novo Preto" },
+  "save": { "message": "Salvar" },
+  "add": { "message": "Adicionar" },
+  "saveAdd": { "message": "Salvar & Adicionar outro" },
+  "saveEditPattern": { "message": "Salvar & Editar padrões" },
+  "imported": { "message": "Importado" },
+  "addBlacklistTip": { "message": "Adicionar padrões de lista negra para localhost, 127.0.0.1, 192.168.*.*, 172.16.*.*, & 10.*.*.*" },
+  "addBlacklist": { "message": "Adicione padrões pretos para evitar que esse proxy seja usado para endereços IP de host local e intranet/privados" },
+  "addWhitelistTip": { "message": "Adicionar padrão de lista de permissões *" },
+  "patternCheatSheet":  { "message": "Folha de referência de padrão" },
+
+  "logSize": { "message": "Tamanho do registro" },
+  "url": { "message": "URL" },
+  "proxyTitle": { "message": "Título do proxy" },
+  "proxyAddress": { "message": "Endereço proxy" },
+  "matchPattern": { "message": "Padrão de correspondência" },
+  "whiteBlack": { "message": "Branco/Preto" },
+  "white": { "message": "Branco" },
+  "black": { "message": "Preto" },
+  "timestamp": { "message": "Carimbo de data e hora" },
+  "notApplicable": {"message": "n/a"},
+  "matchedURLs": {"message": "URLs que correspondem a padrões"},
+  "unmatchedURLs": {"message": "URLs que não correspondem aos padrões"},
+
+
+  "pasteList": { "message": "Cole uma lista de proxy abaixo."},
+  "formats": {"message": "formatos"},
+  "simple": { "message": "simples" },
+  "complete": { "message": "completo" },
+  "simpleFormat": { "message": "Endereço IP/Servidor e Porta são necessários. Nome de Usuário:Senha são Opcionais."},
+  "ipPort": {"message": "ip:porta"},
+  "ipPortUsernamePassword": {"message": "ip:porta:usuário:senha"},
+  "examples": {"message": "Exemplos"},
+  "completeFormat": { "message": "Com este formato, você pode especificar todas as configurações de proxy. Mas apenas protocolo e servidor são necessários."},
+  "overwriteProxies": { "message": "Substituir proxies existentes" },
+  "overwritProxiesHelp1": { "message": "Marque para excluir todos os proxies existentes e substituí-los por proxies desta lista." },
+  "overwritProxiesHelp2": { "message": "Desmarque para anexar proxies nesta lista a proxies existentes." },
+  "confirmOverwrite": { "message": "Tem certeza de que deseja substituir os proxies existentes?" },
+  "importsSkipped": { "message": "$1 linhas ignoradas porque não puderam ser analisadas:\n\n$2" },
+  "importSucceeded": {
+    "message": "Ler e armazenar proxies de $1."
+  }
+}
