--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -27,6 +27,11 @@
   "containerDescription": { "message": "Incognito/Container proxy (Firefox only)" },
   "incognito": { "message": "Incognito" },
 
+  "shortcut": { "message": "Keyboard Shortcut" },
+  "shortcutDescription": { "message": "Preselect a proxy to associate with a keyboard shortcut action" },
+  "setProxy": { "message": "Set Proxy" },
+
+
   "deleteBrowsingData": { "message": "Delete Browsing Data" },
   "deleteBrowsingDataConfirm": { "message": "Are you sure you want to delete cookies, indexedDB storage, DOM local storage?" },
   "restoreDefaults": { "message": "Restore Defaults" },
