--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -82,6 +82,7 @@
   "back": { "message": "Back" },
 
   "log": { "message": "Log" },
+  "request": { "message": "Request" },
   "documentUrl": { "message": "Document URL" },
   "url": { "message": "URL" },
   "method": { "message": "Method" },
