--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -43,6 +43,7 @@
   "add": { "message": "Add" },
   "getLocation": { "message": "Get Location" },
 
+  "duplicate": { "message": "Duplicate" },
 
   "title": { "message": "Title" },
   "type": { "message": "Type" },
