--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -1,5 +1,6 @@
 {
   "extensionName": { "message": "FoxyProxy" },
+  "extensionNameBasic": { "message": "FoxyProxy Basic" },
   "extensionDescription": { "message": "Easy to use advanced Proxy Management tool for everyone" },
 
   "proxyByPatterns": { "message": "Proxy by Patterns" },
